# masterthesis_code

./: CMakeLists.txt  cpaAttack.c  cpaTest.c  printParamas.h
NewHope/: CMakeLists.txt  PQCgenKAT_kem.c  cpapke.c  cpapke.h  poly.c
